--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,6 +1,7 @@
 $navbar-toggler-focus-width: 0;
 $pink: #f3a6ad;
 $white: #fff;
+$purple: #9ea1e9cd;
 $github: #b39ddbcd;
 $telegram: #80cbc3ca;
 $twitter: #f88d8db3;
