--- a/src/assets/scss/blocks/animation.scss
+++ b/src/assets/scss/blocks/animation.scss
@@ -21,46 +21,36 @@
     }
 };
 
-@keyframes bike {
+// @keyframes bike {
 
-    0% {
-        position: relative;
-        right: -100%;
-    }
+//     0% {
+//         position: relative;
+//         right: -300%;
+//     }
 
-    15% {
-        position: relative;
-        right: -70%;
-    }
+//     50% {
+//         position: relative;
+//         right: -150%;
+//     }
 
-    25% {
-        position: relative;
-        right: -50%;
-    }
+//     75% {
+//         position: relative;
+//         right: -75%;
+//     }
 
-    50% {
-        position: relative;
-        right: -30%;
-    }
+//     90% {
+//         position: relative;
+//         right: -30%;
+//     }
 
-    75% {
-        position: relative;
-        right: -15%;
-    }
+//     95% {
+//         position: relative;
+//         right: -10%;
+//     }
 
-    90% {
-        position: relative;
-        right: -5%;
-    }
+//     100% {
+//         position: static;
+//         right: 0;
+//     }
 
-    95% {
-        position: relative;
-        right: -1%;
-    }
-
-    100% {
-        position: static;
-        right: 0;
-    }
-
-};
+// };
