--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -89,7 +89,7 @@ ul {
 @import "blocks/about";
 @import "blocks/animation";
 @import "blocks/skills";
-// @import "blocks/";
+@import "blocks/portfolio";
 // @import "blocks/";
 // @import "blocks/";
 // @import "blocks/";
