--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,5 +1,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="assets/css/style.min.css">
+<link type="image/png" sizes="16x16" rel="icon" href="/assets/images/favicon.ico">
+
 
 <!-- Useful meta tags -->
 <meta http-equiv="x-ua-compatible" content="ie=edge">
