--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
         <div class="menu-inner">
           <ul class="menu-list">
             <li class="menu-list_li"><a class="menu-li-link" href="#home">Home</a></li>
-            <li class="menu-list_li"><a class="menu-li-link" href="">Portfolio</a></li>
+            <li class="menu-list_li"><a class="menu-li-link" href="#portfolio">Portfolio</a></li>
             <li class="menu-list_li"><a class="menu-li-link" href="#skills">Skills</a></li>
             <li class="menu-list_li"><a class="menu-li-link" href="">Contact</a></li>
           </ul>
