--- a/src/assets/scss/blocks/skills.scss
+++ b/src/assets/scss/blocks/skills.scss
@@ -1,52 +1,29 @@
 .expertise {
-    background-color: #9ea1e9cd;
+    background-color: $purple;
+    padding-bottom: 100px;
 }
 
-.skill {
+.expertise-container {
     display: flex;
-    align-items: center;
-    padding-bottom: 40px;
-    text-transform: uppercase;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
-.skill-name {
-    width: 10%;
-    padding-top: 21px;
-    font-size: 38px;
-    text-align: center;
-}
-
-.skill-ul {
-    display: flex;
-    justify-content: space-evenly;
-    width: 90%;
-}
-
-.skill-li-hidden {
+.degree-li-hidden {
     visibility: hidden;
 }
 
 .degree {
     display: block;
-    transform: scale(-1, 1);
+    // transform: scale(-1, 1);
     height: 100px;
     width: 100px;
-}
-
-.skill-li {
-    animation: bike 3s linear normal 0s none;
-
-        &:not(:first-child) {
-            animation-delay: .1s;
-        }
 }
 
 .percent {
     display: flex;
     justify-content: space-between;
-    width: 82%;
-    margin: 0 0 0 200px;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
 }
 
 .percent-item {
@@ -70,7 +47,7 @@
     display: inline-block;
     text-transform: uppercase;
     background-color: $white;
-    padding: 5px;
+    padding: 7px 12px 5px;
     position: relative;
     border: 1px solid #000;
     border-radius: 3px;
@@ -105,3 +82,77 @@
         }
 
 }
+
+.skill-ul {
+    width: 15%;
+}
+
+.degree-ul {
+    width: 16.66667%;
+
+}
+
+.degree-ul,
+.skill-ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+.skill-name {
+    height: 143px;
+    display: flex;
+    align-items: center;
+    font-size: 38px;
+    text-transform: uppercase;
+
+        &:first-child {
+            padding-top: 28px;
+        }
+}
+
+.skill-inner {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-bottom: 100px;
+
+}
+
+.degree-li {
+    padding: 20px 0;
+}
+
+.skill-about {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.skill-image {
+    display: block;
+    height: 450px;
+    // width: 500px;
+    position: relative;
+    z-index: 5;
+}
+
+.skill-text {
+    text-align: center;
+    font-size: 18px;
+}
+
+    // &::after {
+    //     content: '';
+    //     display: block;
+    //     width: 400px;
+    //     height: 596px;
+    //     background-color: #fff;
+    //     clip-path: ellipse(48% 26% at 50% 50%);
+    //     position: absolute;
+    //     top: -118px;
+    //     left: -47px;
+    //     z-index: 3;
+    //     transform: rotate(45deg);
+    // }
