--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,7 +1,8 @@
 $navbar-toggler-focus-width: 0;
-$pink: #f3a6ad;
+$pink: #f3a6accb;
 $white: #fff;
-$purple: #9ea1e9cd;
+$purple: #b09ee9b7;
 $github: #b39ddbcd;
 $telegram: #80cbc3ca;
 $twitter: #f88d8db3;
+$green: #bbd0ffbe;
