--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -90,7 +90,7 @@ ul {
 @import "blocks/animation";
 @import "blocks/skills";
 @import "blocks/portfolio";
-// @import "blocks/";
+@import "blocks/contact";
 // @import "blocks/";
 // @import "blocks/";
 
