--- a/src/assets/scss/blocks/skills.scss
+++ b/src/assets/scss/blocks/skills.scss
@@ -15,7 +15,6 @@
 
 .degree {
     display: block;
-    // transform: scale(-1, 1);
     height: 100px;
     width: 100px;
 }
@@ -24,6 +23,7 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 40px;
+    width: 83.33333%;
 }
 
 .percent-item {
@@ -125,6 +125,7 @@
 }
 
 .skill-about {
+    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -133,7 +134,6 @@
 .skill-image {
     display: block;
     height: 450px;
-    // width: 500px;
     position: relative;
     z-index: 5;
 }
